--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -33,15 +33,12 @@
             <%= fa_icon 'user' %> <%= current_user.full_name %>
           </li>
           <li class='nav-item'>
-            <%= link_to("Logout", destroy_user_session_path, class: "btn btn-danger logout-button", method: :delete) %>
+            <%= link_to("Logout", destroy_user_session_path, class: "btn btn-danger", method: :delete) %>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     <% end %>
   </div>
 </nav>
+
 
