--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -15,24 +15,29 @@
           <th scope="row"><%= stock.ticker %></th>
           <td><%= stock.name %></td>
           <td><%= stock.last_price %></td>
-          <td>
+          <td class="d-flex justify-content-start align-items-center">
             <% if current_user.can_track_stock?(stock.ticker) %>
               <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: stock.ticker), class: "btn btn-sm btn-success", method: :post %>
             <% elsif current_user.id != @user.id %>
-              <span class="badge badge-secondary">
-                You are already tracking
-                <% if !current_user.under_stock_limit? && current_user.stock_already_tracked?(stock.ticker) %>
-                  10 stocks and this stock
-                <% elsif !current_user.under_stock_limit? %>
+                <span class="badge badge-secondary">
+                  You are already tracking
+                  <% if !current_user.under_stock_limit? && current_user.stock_already_tracked?(stock.ticker) %>
+                    10 stocks and this stock
+                  <% elsif !current_user.under_stock_limit? %>
                     10 stocks
-                <% elsif current_user.stock_already_tracked?(stock.ticker) %>
+                  <% elsif current_user.stock_already_tracked?(stock.ticker) %>
                     this stock
-                <% end %>
-              </span>
+                  <% end %>
+                </span>
             <% end %>
             <% if current_user.id == @user.id %>
               <%= link_to 'Remove', user_stock_path(stock), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-sm btn-warning' %>
             <% end %>
+            <span class="ml-auto">
+              <%= link_to refresh_stock_path(stock: stock, user: @user), class: 'refresh-button', method: :patch do %>
+                  <%= fa_icon 'refresh' %>
+                <% end %>
+              </span>
           </td>
         </tr>
       <% end %>
